<resources>
    <string name="app_name">InsulinApp</string>
    <string-array name="age_array">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>
    <string name="monthJan">Jan</string>
    <string name="monthFeb">Feb</string>
    <string name="monthMar">Mar</string>
    <string name="monthApr">Apr</string>
    <string name="monthMay">May</string>
    <string name="monthJun">Jun</string>
    <string name="monthJul">Jul</string>
    <string name="monthAug">Aug</string>
    <string name="monthSep">Sep</string>
    <string name="monthOct">Oct</string>
    <string name="monthNov">Nov</string>
    <string name="monthDec">Dec</string>
    <string name="dateBundleTextLiteral">date</string>
    <string name="monthBundleTextLiteral">month</string>
    <string name="yearBundleTextLiteral">year</string>
    <string name="genderMaleTextLiteral">Male</string>
    <string name="genderFemaleTextLiteral">Female</string>
    <string name="errorReadingDB">Error reading from database</string>
    <string name="loadingDataDB">Loading data from database</string>
    <string name="dataSavedDB">Data has been stored to database</string>
    <string name="dataOverwrittenDB">Your previous data has been overwritten with new one</string>
    <string name="internetErrorDB">Error connecting to database, please check your internet connection</string>
    <string name="previousDataOverwrittenDB">Your previous data has been updated with the new one</string>
    <string name="healthArticlesURL">https://www.icliniq.com/articles/health-topics/diabetes-health</string>
    <string name="basalTypeTextLiteral">Basal Insulin</string>
    <string name="bolusTypeTextLiteral">Bolus Insulin</string>
    <string name="authenticationSuccessfulTextLiteral">Authentication successful</string>
    <string name="authenticationFailedTextLiteral">Authentication failed</string>
    <string name="calendarActionBarString">Calendar</string>
    <string name="dashboardActionBarString">Dashboard</string>
    <string name="detailedReportsActionBarString">Detailed Reports</string>
    <string name="disclaimerActionBarString">Disclaimer</string>
    <string name="addDoctorActionBarString">Add Doctor</string>
    <string name="doctorActionBarString">Contact Doctor</string>
    <string name="healthArticlesActionBarString">iCliniq Health Articles</string>
    <string name="bolusLoggingActionBarString">Log Bolus Data</string>
    <string name="basalLoggingActionBarString">Log Basal Data</string>
    <string name="loginActionBarString">Login</string>
    <string name="reminderActionBarString">Reminders</string>
    <string name="menuActionBarString">Insulin App</string>
    <string name="notesActionBarString">Notes</string>
    <string name="registerActionBarString">Register</string>
    <string name="splashActionBarString">Insulin App</string>
    <string name="profileActionBarString">Profile</string>
    <string name="editProfileActionBarString">Edit Profile</string>
    <string name="bolusBreakfastEvent">Breakfast</string>
    <string name="bolusLunchEvent">Lunch</string>
    <string name="bolusDinnerEvent">Dinner</string>
    <string name="bolusBGDataTable">Bolus BG Data</string>
    <string name="basalBGDataTable">Basal BG Data</string>
    <string name="bolusKeysTable">Bolus BG Keys</string>
    <string name="basalKeysTable">Basal BG Keys</string>
    <string name="userTable">User</string>
    <string name="doctorTable">Doctor Data</string>
    <string name="notesTable">Notes</string>
    <string name="userNameColumn">mname</string>
    <string name="userAgeColumn">mage</string>
    <string name="userGenderColumn">mgender</string>
    <string name="userWeightColumn">mweight</string>
    <string name="userHeightColumn">mheight</string>
    <string name="userEmailIDColumn">emailID</string>
    <string name="bolusEmailColumn">emailID</string>
    <string name="bolusCalendarTimeColumn">calendarTime</string>
    <string name="bolusBeforeEventColumn">beforeEvent</string>
    <string name="bolusCurrentBGLevelColumn">currentBGLevel</string>
    <string name="bolusTargetBGLevelColumn">targetBGLevel</string>
    <string name="bolusTotalCHOColumn">totalCHO</string>
    <string name="bolusCHOAmountDisposedByInsulinColumn">amountDisposedByInsulin</string>
    <string name="bolusCorrectionFactorColumn">correctionFactor</string>
    <string name="bolusInsulinRecommendationColumn">insulinRecommendation</string>
    <string name="bolusTypeOfBGColumn">typeOfBG</string>
    <string name="basalEmailColumn">emailID</string>
    <string name="basalCalendarTimeColumn">calendarTime</string>
    <string name="basalWeightColumn">mweight</string>
    <string name="basalTDIColumn">mtdi</string>
    <string name="basalInsulinRecommendationColumn">insulinRecommendation</string>
    <string name="basalTypeOfBGColumn">typeOfBG</string>
    <string name="doctorNameColumn">mname</string>
    <string name="doctorPhoneColumn">phoneNum</string>
    <string name="notesEmailColumn">myEmailID</string>
    <string name="notesTimeColumn">myTime</string>
    <string name="notesDetailsColumn">myNotes</string>
    <string name="registrationPageTitle">REGISTER</string>
    <string name="emailIDText">Email ID:</string>
    <string name="passwordText">Password:</string>
    <string name="confirmPasswordText">Confirm Password:</string>
    <string name="nameText">Name:</string>
    <string name="genderText">Gender:</string>
    <string name="genderMaleText">Male</string>
    <string name="genderFemaleText">Female</string>
    <string name="ageText">Age:</string>
    <string name="weightText">Weight (kg):</string>
    <string name="heightText">Height (cm):</string>
    <string name="confirmBtnText">CONFIRM</string>
    <string name="registerNoEmailIDToastTextLiteral">You haven\'t entered your email ID</string>
    <string name="registerNoPasswordToastTextLiteral">You haven\'t entered your password</string>
    <string name="registerNoAgainPasswordToastTextLiteral">You haven\'t re-entered your password</string>
    <string name="registerNoPasswordMatchToastTextLiteral">Your passwords don\'t match</string>
    <string name="registerNoNameToastTextLiteral">You haven\'t entered your name</string>
    <string name="registerNoGenderToastTextLiteral">You haven\'t selected your gender</string>
    <string name="registerNoWeightToastTextLiteral">You haven\'t entered your weight</string>
    <string name="registerNoHeightToastTextLiteral">You haven\'t entered your height</string>
    <string name="registerIncorrectEmailFormat">Your email ID is not in the correct format</string>
    <string name="loginPageTitle">LOGIN</string>
    <string name="loginBtnText">SIGN IN</string>
    <string name="loginEmailIDHint">john.doe@example.com</string>
    <string name="loginPasswordHint">12345678</string>
    <string name="loginNoEmailToastTextLiteral">Please enter your email ID</string>
    <string name="loginNoPasswordToastTextLiteral">Please enter your password</string>
    <string name="dashboardPageTitle">DASHBOARD</string>
    <string name="assistantPreTextLiteral">Assistant says: Your lifetime average bolus sugar level has been </string>
    <string name="assistantMidTextLiteral">mg/dl in the past </string>
    <string name="assistantEndHighTextLiteral">readings. You should consume less carbohydrates. Normal pre–meal blood sugar level is 70–99mg/dl.</string>
    <string name="assistantEndLowTextLiteral">readings. You should consume more carbohydrates. Normal pre–meal blood sugar level is 70–99mg/dl.</string>
    <string name="viewProfileBtnText">View Profile</string>
    <string name="editProfileBtnText">Edit Profile</string>
    <string name="logBolusBGBtnText">Log Bolus Blood Level</string>
    <string name="logBasalBGBtnText">Log Basal Blood Level</string>
    <string name="calendarBtnDashboardText">Calendar</string>
    <string name="medicineReminderBtnText">Medicine Reminder</string>
    <string name="healthArticlesBtnText">Health Articles</string>
    <string name="doctorBtnText">Contact Doctor</string>
    <string name="disclaimerBtnText">Disclaimer</string>
    <string name="detailedReportsBtnText">Detailed Reports</string>
    <string name="eventTitleText">Event:</string>
    <string name="initialBGTitleText">Initial Blood Glucose Level (mg/dl):</string>
    <string name="targetBGTitleText">Target Blood Glucose Level (mg/dl):</string>
    <string name="amountOfCHOTitleText">Amount of CHO in meal (g):</string>
    <string name="disposedCHOTitleText">Amount of CHO disposed by 1 unit of Insulin (g):</string>
    <string name="correctionFactorTitleText">Correction Factor:</string>
    <string name="insulinRecommendationTitleText">Recommended Insulin (units):</string>
    <string name="insulinTypeTitleTextView">Insulin Type:</string>
    <string name="eventText">-</string>
    <string name="initialBGText">-</string>
    <string name="targetBGText">-</string>
    <string name="amountOfCHOText">-</string>
    <string name="disposedCHOText">-</string>
    <string name="correctionFactor2Text">-</string>
    <string name="insulinRecommendationText">-</string>
    <string name="insulinTypeTextView">-</string>
    <string name="basalWeightTitleText">Weight (kg):</string>
    <string name="basalTDITitleText">Total Daily Insulin (units):</string>
    <string name="basalInsulinRecommendedTitleText">Recommended Insulin (units):</string>
    <string name="basalInsulinTypeTitleText">Insulin Type:</string>
    <string name="basalWeightText">-</string>
    <string name="basalTDIText">-</string>
    <string name="basalInsulinRecommendedText">-</string>
    <string name="basalInsulinTypeText">-</string>
</resources>